# pop_fly

./: .gitignore  CONTRIBUTING.md  PRD.md  README.md  ROADMAP.md  feature-plan.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  assistant-guidelines.md  automation_policy.json  copilot-instructions.md  labeler.yml  pull_request_template.md
.github/workflows/: architecture-guard.yml  auto-label-docs.yml  ci.yml  feature-request.yml  generate-docs-dryrun.yml  generate-docs.yml  implement-guarded.yml  plan-issues.yml  roadmap-to-issues.yml  scaffold-from-plan.yml  update-pr-checklist.yml
docs/schema/: docs_ops.json  plan_schema.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx
scripts/: ai_plan_issue.py  architecture_guard.py  generate_docs.py  plan_feature.py  roadmap_to_issues.py  scaffold_from_plan.py  update_pr_checklist.py
src/mortar_calc/: __init__.py  cli.py  core.py
src/mortar_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mortar_calc/web/: app.py
src/pop_fly/: __init__.py  cli.py  core.py
src/pop_fly/web/: app.py
tests/: test_ai_plan_ensure_pygithub.py  test_ai_plan_get_issue_context.py  test_ai_plan_issue_dryrun.py  test_ai_plan_parse_event_issue.py  test_api.py  test_cli.py  test_core.py  test_docs_applier.py  test_roadmap_to_issues.py
tmp/ai-plan-dryrun/: issue-42-plan.txt
