[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mortar-calc"
version = "0.1.0"
description = "Distance and direction calculator for local XY(+Z) grids"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "You" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
mortar-calc = "mortar_calc.cli:main"
mortar-calc-web = "mortar_calc.web.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
web = [
  "fastapi>=0.110",
  "uvicorn>=0.22",
]
