[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pop_fly"
version = "2.0.0"
description = "Distance and direction calculator for local XY grids (2D only)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "You" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
pop_fly = "pop_fly.cli:main"
pop_fly_web = "pop_fly.web.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
web = [
  "fastapi>=0.110",
  "uvicorn>=0.22",
  "httpx>=0.24",
]
